[gd_scene load_steps=3 format=3 uid="uid://bj68gk83uimun"]

[ext_resource type="Script" path="res://scripts/ChooseLevel.gd" id="1_ouncc"]
[ext_resource type="Texture2D" uid="uid://cfk02yx61erd6" path="res://images/background.png" id="2_bemtl"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouncc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.494118, 0.917647, 0.439216, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bemtl")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -203.0
offset_right = 176.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 47
text = "Card Jumper"
horizontal_alignment = 1

[node name="Divider" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="LevelOneButton" type="Button" parent="ColorRect/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Level 1"

[node name="Divider2" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="LevelTwoButton" type="Button" parent="ColorRect/VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Level 2"

[node name="Divider3" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="LevelThreeButton" type="Button" parent="ColorRect/VBoxContainer/MarginContainer4"]
layout_mode = 2
text = "Level 3"

[node name="Divider4" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="ColorRect/VBoxContainer/MarginContainer5"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="ColorRect/VBoxContainer/MarginContainer2/LevelOneButton" to="." method="_on_level_one_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/MarginContainer3/LevelTwoButton" to="." method="_on_level_two_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/MarginContainer4/LevelThreeButton" to="." method="_on_level_three_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/MarginContainer5/BackButton" to="." method="_on_back_button_pressed"]
